--- a/erp-quimicos/src/main/webapp/vm/invcontrolcostos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/invcontrolcostos/startup.vm
@@ -155,7 +155,7 @@
                     
                     <div id="div_two" title="" class="invcontrolcostos_div_two">
                         <div class="columns on-2">
-                            <div class="fixed column" style="width:1118px; padding-left:6px;"><strong>Control de Costos</strong></div>
+                            <div class="fixed column" style="width:1188px; padding-left:6px;"><strong>Control de Costos</strong></div>
                             <div class="fixed column" style="width:20px; height:25px;">
                                 <div id="close" style="height:25px;background-image:url('../../img/modalbox/close.png'); background-color:; background-position:top; cursor:pointer; background-repeat:no-repeat;"></div>
                             </div>
@@ -179,7 +179,7 @@
 										<table border="0" style="margin:0; padding:0;">
 											
 											<tr>
-												<td width="735" valign="top" colspan="6">
+												<td width="795" valign="top" colspan="6">
 													<table border="0" class="gral">
 														<tr>
 															<td width="10"></td>
@@ -341,8 +341,9 @@
 												<td width="300" colspan="2" style="border: solid 1px #313E74;" valign="top">
 													<table border="0">
 														<tr>
-															<td width="50" height="10"></td>
-															<td width="110"></td>
+															<td width="50" height="5"></td>
+															<td width="90"></td>
+															<td width="20"></td>
 															<td width="20"></td>
 															<td width="60"></td>
 															<td width="5"></td>
@@ -350,52 +351,80 @@
 														</tr>
 														<tr>
 															<td width="50"></td>
-															<td width="110">I.G.I</td>
+															<td width="110" colspan="2">I.G.I</td>
 															<td width="80" colspan="2"><input type="text" name="costo_importacion" style="width:80px; text-align:right"></td>
 															<td width="5">%</td>
 															<td width="30"></td>
 														</tr>
+														<!--
 														<tr>
 															<td width="255" colspan="6" height="10"></td>
 														</tr>
+														-->
 														<tr>
 															<td width="50"></td>
-															<td width="110">G.I.</td>
+															<td width="110" colspan="2">G.I.</td>
 															<td width="80" colspan="2"><input type="text" name="costo_directo" style="width:80px; text-align:right"></td>
 															<td width="5">%</td>
 															<td width="30"></td>
 														</tr>
+														<!--
 														<tr>
 															<td width="255" colspan="6" height="10"></td>
 														</tr>
+														-->
 														<tr>
 															<td width="50"></td>
-															<td width="110">Margen&nbsp;Precio&nbsp;M&iacute;nimo</td>
+															<td width="110" colspan="2">Costo&nbsp;Adicional</td>
+															<td width="80" colspan="2"><input type="text" name="costo_adic" style="width:80px; text-align:right"></td>
+															<td width="5"></td>
+															<td width="30"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_costoadic"></div></td>
+														</tr>
+														<!--
+														<tr>
+															<td width="255" colspan="6" height="10"></td>
+														</tr>
+														-->
+														<tr>
+															<td width="50"></td>
+															<td width="110" colspan="2">Margen&nbsp;Precio&nbsp;M&iacute;nimo</td>
 															<td width="80" colspan="2"><input type="text" name="precio_minimo" style="width:80px; text-align:right"></td>
 															<td width="5">%</td>
 															<td width="30"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_preciominimo"></div></td>
 														</tr>
+														
 														<tr>
-															<td width="255" colspan="6" height="10"></td>
+															<td width="255" colspan="7" height="8"></td>
+														</tr>
+														
+														<tr>
+															<td width="50"></td>
+															<td width="90">Simulaci&oacute;n</td>
+															<td width="20"><input type="checkbox" name="check_simulacion"></td>
+															<td width="80" colspan="2"><input type="button" id="aplicar" value="Aplicar" style="width:80px; font-weight: bold;"></td>
+															<td width="5"></td>
+															<td width="30"></td>
+														</tr>
+														
+														<tr>
+															<td width="255" colspan="6" height="8"></td>
 														</tr>
 														<tr>
 															<td width="50"></td>
-															<td width="110">Simulaci&oacute;n</td>
-															<td width="20"><input type="checkbox" name="check_simulacion"></td>
-															<td width="65" colspan="2" align="right"><input type="button" id="aplicar" value="Aplicar" style="width:65px; font-weight: bold;"></td>
-															<!--<td width="5"></td>-->
+															<td width="110" colspan="2"></td>
+															<td width="80" colspan="2"><input type="button" id="pdf" value="PDF" style="width:80px; font-weight:bold;"></td>
+															<td width="5"></td>
 															<td width="30"></td>
 														</tr>
-														<tr>
-															<td width="255" colspan="6" height="10"></td>
-														</tr>
+														<!--
 														<tr>
 															<td width="50"></td>
 															<td width="110"><input type="button" id="pdf" value="PDF" style="width:80px; font-weight: bold;"></td>
 															<td width="80" colspan="3" align="right"><input type="button" id="excel" value="EXCEL" style="width:80px; font-weight: bold;"></td>
 															<!--<td width="5"></td>-->
-															<td width="30"></td>
+															<!--<td width="30"></td>
 														</tr>
+														-->
 													</table>
 												</td>
 											</tr>
@@ -419,13 +448,14 @@
 																<td class="grid" style="background-color: rgb(180, 180, 180);" width="60">&nbsp;<span id="tipo_costo">C.&nbsp;U.</span></td>
 																<td class="grid" style="background-color: rgb(180, 180, 180);" width="60">&nbsp;I.&nbsp;G.&nbsp;I.</td>
 																<td class="grid" style="background-color: rgb(180, 180, 180);" width="60">&nbsp;G.&nbsp;I.</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180);" width="60">&nbsp;C.&nbsp;A.</td>
 																<td class="grid" style="background-color: rgb(180, 180, 180);" width="60">&nbsp;C.&nbsp;I.&nbsp;T.</td>
 																<td class="grid" style="background-color: rgb(180, 180, 180);" width="80">&nbsp;P.M.</td>
 																<td class="grid" style="background-color: rgb(180, 180, 180);" width="65">&nbsp;Moneda&nbsp;P.M.</td>
 															</tr>
 														</thead>
 													</table>
-													<div style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:1085; height: 180px; border:1px solid #C1DAD7 !important;">	
+													<div style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:1145; height: 180px; border:1px solid #C1DAD7 !important;">	
 														<table>
 															<tbody style="background-color: #FFFFFF;" valign="top" id="grid_productos" class="gral">
 																
@@ -438,18 +468,18 @@
 											
 											<tr>
 												<td width="30">O.C.:</td>
-												<td width="200">&nbsp;Numero&nbsp;de&nbsp;Orden&nbsp;de&nbsp;Compra</td>
+												<td width="200">&nbsp;N&Uacute;mero&nbsp;de&nbsp;Orden&nbsp;de&nbsp;Compra</td>
 												<td width="30">C.U.:</td>
 												<td width="200">Costo&nbsp;Ultima&nbsp;Compra</td>
 												<td width="30">I.G.I.:</td>
 												<td>Impuesto General de Importaci&oacute;n</td>
 												<td></td>
 												<td width="30">C.I.T.:</td>
-												<td>Costo Integrado Total (de Importaci&oacute;n)</td>
+												<td>Costo Integrado Total</td>
 											</tr>
 											<tr>
 												<td width="30">Moneda:</td>
-												<td width="200">&nbsp;Moneda&nbsp;de&nbsp;la&nbsp;Factura&nbsp;del&nbsp;proveedor</td>
+												<td width="200">&nbsp;Moneda&nbsp;de&nbsp;la&nbsp;Factura&nbsp;de&nbsp;Compra</td>
 												<td width="30">C.P.:</td>
 												<td width="200">Costo&nbsp;Promedio</td>
 												<td width="30">G.I.:</td>
@@ -461,8 +491,8 @@
 											<tr>
 												<td width="30">T.C.:</td>
 												<td width="200">&nbsp;Tipo de Cambio</td>
-												<td width="30"></td>
-												<td width="200"></td>
+												<td width="30">C.A.</td>
+												<td width="200">Costo Adicional</td>
 												<td width="30" colspan="5"><!--Los valores para los campos T.C., C.U., I.G.I., G.I., C.I.T., P.M. son en M.N.--></td>
 												<!--
 												<td></td>
@@ -482,10 +512,10 @@
                             </div>
 							
 							
-                            <div class="fixed column" style="width:1135px; background:; text-align:right; padding-left:; position:absolute;margin-top:4px;">
+                            <div class="fixed column" style="width:1205px; background:; text-align:right; padding-left:; position:absolute;margin-top:4px;">
 								<table border="0">
 									<tr>
-										<td width="1035"></td>
+										<td width="1105"></td>
 										<td>
 											<input type="image" src="../../img/modalbox/btn1.png" id="submit" style="width:77px; height:24px;"/>
 										</td>
