git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1115 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -249,6 +249,8 @@
 													<li class="topline"><a href="../repprogramacionpagos/startup.agnux">Programaci&oacute;n de pagos</a></li>
 													<li class="topline"><a href="../cxprepantiguedadsaldos/startup.agnux">Antig&uuml;edad de Saldos</a></li>
 													<li class="topline"><a href="../cxprepsaldomes/startup.agnux">Saldo Mensual</a></li>
+													<li class="topline"><a href="../cxpevaluacionprov/startup.agnux">Evaluaci&oacute;n</a></li>
+													
 													<!--
 													<li class="topline"><a href="#">Saldo Mensual</a></li>
 													<li class="topline"><a href="#">Proveedores</a></li>
